add logging4j2 support
Signed-off-by: Sean Corfield <sean@corfield.org>